added authentication and authorization features with JWT support