@@ -1,18 +1,23 @@
 package com.flex.url_shortener.exception;
 
+import static com.flex.url_shortener.common.ApplicationConstants.ExceptionMessage.UNAUTHENTICATED;
+import static com.flex.url_shortener.common.ApplicationConstants.ExceptionMessage.UNAUTHORIZED;
+
+import com.auth0.jwt.exceptions.JWTVerificationException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.validator.internal.engine.path.PathImpl;
-import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.nio.file.AccessDeniedException;
 import java.util.Date;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -35,6 +40,51 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(errorMessage, HttpStatus.NOT_FOUND);
     }
 
+    @ExceptionHandler({AuthenticationException.class, JWTVerificationException.class, AuthenticationCookieMissing.class})
+    public ResponseEntity<ExceptionMessage> handleAuthenticationException(
+            HttpServletRequest request,
+            RuntimeException exception) {
+        log.error("Exception was thrown due authentication failure:", exception);
+
+        final var message = ExceptionMessage.builder()
+                .status(HttpStatus.UNAUTHORIZED.value())
+                .date(new Date())
+                .description(UNAUTHENTICATED)
+                .url(request.getRequestURL().toString())
+                .build();
+
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(message);
+    }
+
+    @ExceptionHandler(AccessDeniedException.class)
+    public ResponseEntity<ExceptionMessage> handleAccessDeniedException(
+            HttpServletRequest request,
+            AccessDeniedException exception) {
+        log.error("Exception was thrown because access was denied:", exception);
+
+        final var message = ExceptionMessage.builder()
+                .status(HttpStatus.FORBIDDEN.value())
+                .date(new Date())
+                .description(UNAUTHORIZED)
+                .url(request.getRequestURL().toString())
+                .build();
+
+        return new ResponseEntity<>(message, HttpStatus.FORBIDDEN);
+    }
+
+    @ExceptionHandler(ValueDuplicationException.class)
+    public ResponseEntity<ExceptionMessage> handleValueDuplicationException(
+            HttpServletRequest request,
+            ValueDuplicationException ex) {
+        log.error("Value duplication encountered:", ex);
+        var errorMessage = new ExceptionMessage(HttpStatus.BAD_REQUEST.value(),
+                new Date(),
+                ex.getMessage(),
+                request.getRequestURI());
+
+        return new ResponseEntity<>(errorMessage, HttpStatus.BAD_REQUEST);
+    }
+
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<ExceptionMessage> handleDataIntegrityViolationException(
             HttpServletRequest request,
@@ -55,7 +105,7 @@ public class GlobalExceptionHandler {
         log.error("Validation on an argument fails:", ex);
         String errors = ex.getBindingResult().getFieldErrors()
                 .stream()
-                .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                .map(a -> "Value '%s' violated constraint: %s".formatted(a.getRejectedValue(), a.getDefaultMessage()))
                 .collect(Collectors.joining(", "));
         var errorMessage = new ExceptionMessage(
                 HttpStatus.BAD_REQUEST.value(), new Date(), errors, request.getRequestURI());
@@ -71,9 +121,7 @@ public class GlobalExceptionHandler {
         List<String> exceptions = ex.getConstraintViolations().stream().map(violation -> {
             var propertyName = ((PathImpl) violation.getPropertyPath()).getLeafNode().getName();
 
-            return String.format(
-                    "%s : %s, value: %s", propertyName, violation.getMessage(), violation.getInvalidValue()
-            );
+            return "%s : %s, value: %s".formatted(propertyName, violation.getMessage(), violation.getInvalidValue());
         }).toList();
 
 
